# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  README.md  env.j2  inventory.yml  playbook.yml  pyproject.toml  todoapp.service
.github/workflows/: my-pipeline.yml
todo_app/: app.py  item.py  trello_list.py  view_model.py
todo_app/data/: session_items.py  trello_items.py
todo_app/templates/: index.html
todo_app/tests/: test_integration.py  test_view_model.py
